--- a/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_auditCompang.form
+++ b/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_auditCompang.form
@@ -250,7 +250,7 @@
       </form:control>
       <form:validation/>
     </form:child>
-    <form:child xsi:type="form:Field" id="buttonDownloadUp" name="下载附件" customize="true">
+    <form:child xsi:type="form:Field" id="buttonDownloadUp" name="基础附件信息" customize="true">
       <form:control type="widget/button">
         <form:attributes source="widget/button">
           <dync:attribute default="" group="HTML设置" id="icon" name="图标" value="fa-arrow-down">
