--- a/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_companyApplay.form
+++ b/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_companyApplay.form
@@ -1286,6 +1286,19 @@
           </form:attributes>
         </form:control>
       </form:child>
+      <form:child xsi:type="form:Field" binding="fileUpPath" id="fileUpPath" name="银行卡照片" customize="true">
+        <form:control type="widget/col_jqgrid">
+          <form:attributes source="widget/col_jqgrid">
+            <dync:attribute default="" group="格式设置" id="customFormatter" name="自定义格式" value="fileUpPath_customFormatter(cellvalue,options,rowObject,dictValueExpression)">
+              <dync:render colSpan="2" height="0" multi="false" name="event">
+                <dync:item name="param" value="cellvalue,options,rowObject,dictValueExpression"/>
+              </dync:render>
+              <dync:children/>
+            </dync:attribute>
+          </form:attributes>
+        </form:control>
+        <form:validation/>
+      </form:child>
       <form:child xsi:type="form:Field" binding="bankOpenBranch" id="bankOpenBranch" name="开户行">
         <form:control type="widget/col_jqgrid">
           <form:attributes source="widget/col_jqgrid">
@@ -1935,10 +1948,10 @@ tableButton_customFormatter:function(cellvalue,options,rowObject,dictValueExpres
 print:function(rowObject){
 	var i = rowObject.lineid
 	var pathid = i+&quot;path&quot;; 
-	//$(&quot;#&quot;+pathid).val(&quot;aaa&quot;);
+	var viewPath = i+&quot;pathView&quot;;
 	Modal.open(&quot;f/accountFileUp&quot;,{},function(id){
-	//alert(id);
 		$(&quot;#&quot;+pathid).text(id);
+		$(&quot;#&quot;+viewPath).text(id)
 	});
 	
 	//alert($(&quot;#&quot;+pathid).val());
@@ -1974,6 +1987,11 @@ buttonAroad_click:function($event){
 	var urr = $params.roadLicenceFile.url;
 	Modal.open(&quot;f/fileView&quot;,{&quot;url&quot;:urr},function(){
 			    });
+},
+
+fileUpPath_customFormatter:function(cellvalue,options,rowObject,dictValueExpression){
+	var i = rowObject.lineid
+	return '&lt;span id=&quot;'+i+'pathView&quot;>'+&quot;未上传&quot;+'&lt;/span>'
 }</form:scripts>
   <form:htmls>
 &lt;script type=&quot;text/ng-template&quot; id=&quot;div1_html&quot;>
