--- a/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_checkhead_all.form
+++ b/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_checkhead_all.form
@@ -30,7 +30,7 @@
         <dync:render/>
         <dync:children/>
       </dync:attribute>
-      <dync:attribute default="" group="事件" id="beforeDataSourceLoad" name="数据源加载前" value="">
+      <dync:attribute default="" group="事件" id="beforeDataSourceLoad" name="数据源加载前" value="page_beforeDataSourceLoad($params)">
         <dync:render/>
         <dync:children/>
       </dync:attribute>
@@ -1147,7 +1147,12 @@ refresh:function(){&#xD;
 	$view.custom_checkdocument.refresh();		&#xD;
 },
 
-page_onload:function(){
+page_onload:function(){&#xD;
+&#xD;
+	&#xD;
+	&#xD;
+	&#xD;
+	
 	for(var i=0;i&lt;$model.items.result.length;i++){&#xD;
 		$view.checkitem.addOptions($model.items.result[i]);&#xD;
 	}&#xD;
@@ -1583,6 +1588,19 @@ buttonSearch1_click:function($event){
 	//将表单放到body中&#xD;
 	$('body').append(form);&#xD;
 	form.submit();//提交表单2
+},
+
+page_beforeDataSourceLoad:function($params){
+  var w=window.parent.document.getElementsByTagName(&quot;div&quot;);&#xD;
+  var $w=$(w);&#xD;
+  var $thisIf = $(window.parent.document.getElementsByTagName(&quot;iframe&quot;));&#xD;
+  $thisIf.each(function(index, el) {&#xD;
+    var strsrc = $(this).attr('src');&#xD;
+    if (strsrc.indexOf('tps/') != -1) {&#xD;
+        console.log('find');&#xD;
+        $(this).parent().parent().attr('style','padding-top:0px !important;');&#xD;
+      }&#xD;
+  });	
 }</form:scripts>
   <form:htmls>
 &lt;script type=&quot;text/ng-template&quot; id=&quot;div_html&quot;>
